Closed
Bug 1729742
Opened 4 years ago
Closed 4 years ago
Window maximize/restore button not highlighted on hover or active
Categories
(Firefox :: Theme, defect)
Tracking
()
RESOLVED
FIXED
94 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | --- | fixed |
People
(Reporter: molly, Assigned: emk)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
Details |
On at least Windows 10 and 11, when the system title bar is not enabled, hovering over the window maximize/restore button does not highlight it. It also doesn't get highlighted while active (i.e., being pressed).
Confirmed via mozregression that this regressed in bug 1718629.
| Reporter | ||
Comment 2•4 years ago
|
||
Bug 1729749 may not be precisely the same bug, because the button does still function for me, but it does look like the same regressor.
| Assignee | ||
Comment 3•4 years ago
|
||
We will have to handle WM_NCMOUSEMOVE in addition to WM_MOUSEMOVE because the maximize button is no longer a client area.
| Assignee | ||
Comment 4•4 years ago
|
||
We have mMouseInDraggableArea to resolve a similar issue (bug 1534389).
| Assignee | ||
Comment 5•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Comment 6•4 years ago
|
||
Set release status flags based on info from the regressing bug 1718629
status-firefox92:
--- → unaffected
status-firefox93:
--- → unaffected
status-firefox94:
--- → affected
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Pushed by VYV03354@nifty.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/f42f38e4af15
Send normal mouse events when cursor is over a maximize button on Windows. r=handyman
Comment 8•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•