Bug 1729742 - Send normal mouse events when cursor is over a maximize button on Windows. r=handyman

Differential Revision: https://phabricator.services.mozilla.com/D125041